--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="bower_components/angular-material/themes/indigo-theme.css" rel="stylesheet" type="text/css">
     <link href="bower_components/angular-material/themes/blue-theme.css" rel="stylesheet" type="text/css">
     <link href="bower_components/angular-material/themes/light-blue-dark-theme.css" rel="stylesheet" type="text/css">
+    <link href="bower_components/angular-material/themes/red-theme.css" rel="stylesheet" type="text/css">
     <link href="app/app.less" type="text/css" rel="stylesheet/less">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.css" rel="stylesheet"
@@ -33,7 +34,7 @@
 <!--})();-->
 <!--</script>-->
 
-<body ng-controller="ApplicationCtrl" md-theme="indigo">
+<body ng-controller="ApplicationCtrl" md-theme="indigo" layout="horizontal">
 
 <!-- Livereload script for development only (stripped during dist build) -->
 <script src="http://localhost:35729/livereload.js" data-concat="false"></script>
@@ -102,130 +103,130 @@
 <script src="app/widgets/gantt/gantt-widget.js"></script>
 <!-- Add New Component JS Above -->
 
-<section layout="horizontal" layout-fill>
-    <!--dont use md-whiteframe class because it leaves black artifacts-->
-    <md-sidenav class="md-sidenav-left" component-id="left-sidenav" layout="vertical" style="box-shadow: 0px 8px 17px 1px rgba(0, 0, 0, 0.2);">
-        <md-toolbar md-theme="light-blue-dark" class="md-medium-tall">
-            <h1 class="md-toolbar-tools" style="padding-top:25px; padding-left: 25px; font-size: 1.5em;">katGUI</h1>
-        </md-toolbar>
-        <md-content class="md-content-padding">
-            <md-list>
-                <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('landing') }" ng-click="sideNavStateGo('landing')">Home</button>
-                </md-item>
-                <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('alarms') }" ng-click="sideNavStateGo('alarms')">Alarms</button>
-                </md-item>
-                <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('health') }" ng-click="sideNavStateGo('health')">Health And State</button>
-                </md-item>
-                <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('operatorControl') }" ng-click="sideNavStateGo('operatorControl')">Operator Control</button>
-                </md-item>
-                <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('scheduler') }" ng-click="sideNavStateGo('scheduler')">Scheduler</button>
-                </md-item>
-                <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('sensorGraph') }" ng-click="sideNavStateGo('sensorGraph')">Sensor Graphs</button>
-                </md-item>
-                <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('video') }" ng-click="sideNavStateGo('video')">Video</button>
-                </md-item>
-                <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('about') }" ng-click="sideNavStateGo('about')">About katGUI</button>
-                </md-item>
+<!--<section >-->
+<!--dont use md-whiteframe class because it leaves black artifacts-->
+<md-sidenav class="md-sidenav-left" component-id="left-sidenav" layout="vertical" style="box-shadow: 0px 8px 17px 1px rgba(0, 0, 0, 0.2);">
+    <md-toolbar md-theme="light-blue-dark" class="md-medium-tall">
+        <h1 class="md-toolbar-tools" style="padding-top:25px; padding-left: 25px; font-size: 1.5em;">katGUI</h1>
+    </md-toolbar>
+    <md-content class="md-content-padding">
+        <md-list>
+            <md-item>
+                <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('landing') }" ng-click="sideNavStateGo('landing')">Home</button>
+            </md-item>
+            <md-item>
+                <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('alarms') }" ng-click="sideNavStateGo('alarms')">Alarms</button>
+            </md-item>
+            <md-item>
+                <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('health') }" ng-click="sideNavStateGo('health')">Health And State</button>
+            </md-item>
+            <md-item>
+                <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('operatorControl') }" ng-click="sideNavStateGo('operatorControl')">Operator Control</button>
+            </md-item>
+            <md-item>
+                <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('scheduler') }" ng-click="sideNavStateGo('scheduler')">Scheduler</button>
+            </md-item>
+            <md-item>
+                <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('sensorGraph') }" ng-click="sideNavStateGo('sensorGraph')">Sensor Graphs</button>
+            </md-item>
+            <md-item>
+                <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('video') }" ng-click="sideNavStateGo('video')">Video</button>
+            </md-item>
+            <md-item>
+                <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('about') }" ng-click="sideNavStateGo('about')">About katGUI</button>
+            </md-item>
 
-            </md-list>
-        </md-content>
-    </md-sidenav>
+        </md-list>
+    </md-content>
+</md-sidenav>
 
-    <md-sidenav class="md-sidenav-right" component-id="right-sidenav" layout="vertical" style="box-shadow: 0px 8px 17px 1px rgba(0, 0, 0, 0.2);">
-        <md-toolbar md-theme="light-blue-dark" class="md-medium-tall">
-            <h1 class="md-toolbar-tools" style="padding-top:25px; padding-left: 25px; font-size: 1.5em;">User Details</h1>
-        </md-toolbar>
-        <md-content class="md-content-padding">
-            <md-list>
-                <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('admin') }" ng-click="sideNavRightStateGo('admin')">User Admin</button>
-                </md-item>
-                <md-item>
-                    <button ink-ripple class="menu-item" ng-click="logout()">Logout</button>
-                </md-item>
+<md-sidenav class="md-sidenav-right" component-id="right-sidenav" layout="vertical" style="box-shadow: 0px 8px 17px 1px rgba(0, 0, 0, 0.2);">
+    <md-toolbar md-theme="light-blue-dark" class="md-medium-tall">
+        <h1 class="md-toolbar-tools" style="padding-top:25px; padding-left: 25px; font-size: 1.5em;">User Details</h1>
+    </md-toolbar>
+    <md-content class="md-content-padding">
+        <md-list>
+            <md-item>
+                <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('admin') }" ng-click="sideNavRightStateGo('admin')">User Admin</button>
+            </md-item>
+            <md-item>
+                <button ink-ripple class="menu-item" ng-click="logout()">Logout</button>
+            </md-item>
 
-            </md-list>
-        </md-content>
-    </md-sidenav>
+        </md-list>
+    </md-content>
+</md-sidenav>
 
-    <section layout="vertical" flex>
-        <md-toolbar ng-show="showNavbar" class="slideInVertically">
-            <div class="md-toolbar-tools" layout="horizontal">
+<div layout="vertical" flex>
+    <md-toolbar ng-show="showNavbar" class="slideInVertically">
+        <div class="md-toolbar-tools" layout="horizontal">
 
-                <button class="button-toolbar-flat-icon"
-                        style="margin-left: 0px; padding: 0px;"
-                        ng-click="toggleLeftSidenav()">
-                    <span class="fa fa-navicon"></span>
+            <button class="button-toolbar-flat-icon"
+                    style="margin-left: 0px; padding: 0px;"
+                    ng-click="toggleLeftSidenav()">
+                <span class="fa fa-navicon"></span>
+            </button>
+
+            <div class="btn-group"
+                 ng-class="{open: operatorControlHover || operatorControlMenuHover}" layout="horizontal">
+
+                <md-button style="height: 40px;" md-theme="blue" class="md-primary md-raised"
+                           aria-label="Operator Control"
+                           ng-mouseenter="operatorControlHover = true"
+                           ng-mouseleave="operatorControlHover = false"
+                           ng-click="operatorControlHover = false; operatorControlMenuHover = false; stateGo('operatorControl')">
+                    Operator Control
+                </md-button>
+
+                <md-content flex style="margin: -7px -1px 0;" class="dropdown-menu"
+                            ng-mouseenter="operatorControlMenuHover = true"
+                            ng-mouseleave="operatorControlMenuHover = false"
+                            role="menu">
+                    <div md-theme="default" style="color: rgba(0,0,0,0.73)" layout="vertical">
+                        <md-button ng-click="inhibitAll()" aria-label="Inhibit All">Inhibit All</md-button>
+                        <md-button ng-click="stowAll()" aria-label="Stow All">Stow All</md-button>
+                        <md-button ng-click="stopAll()" aria-label="Stop All">Stop All</md-button>
+                        <md-button ng-click="resumeOperations()" aria-label="Resume Operations">Resume Operations</md-button>
+                        <md-button disabled ng-click="shutdownComputing()" aria-label="Shutdown Computing">Shutdown Computing</md-button>
+                    </div>
+                </md-content>
+
+            </div>
+
+            <span flex></span>
+
+            <div>
+                <span class="toolbar-time-span">{{utcTime}}</span><span class="toolbar-time-span" style="font-size: 9pt;"> UTC</span><br/>
+                <span class="toolbar-time-span">{{localTime}}</span><span class="toolbar-time-span" style="font-size: 9pt;"> Local</span>
+            </div>
+
+            <button class="button-toolbar-flat-icon"
+                    ng-click="stateGo('landing')"><span>Home</span>
+            </button>
+
+            <div class="alarms-warning-container">
+                <button class="unselectable button-toolbar-flat-icon navbar-btn"
+                        ng-click="stateGo('alarms')">
+                    <span class="fa fa-warning"></span>
                 </button>
-
-                <div class="btn-group"
-                     ng-class="{open: operatorControlHover || operatorControlMenuHover}" layout="horizontal">
-
-                    <md-button style="height: 40px;" md-theme="blue" class="md-primary md-raised"
-                               aria-label="Operator Control"
-                               ng-mouseenter="operatorControlHover = true"
-                               ng-mouseleave="operatorControlHover = false"
-                               ng-click="operatorControlHover = false; operatorControlMenuHover = false; stateGo('operatorControl')">
-                        Operator Control
-                    </md-button>
-
-                    <md-content flex style="margin: -7px -1px 0;" class="dropdown-menu"
-                                ng-mouseenter="operatorControlMenuHover = true"
-                                ng-mouseleave="operatorControlMenuHover = false"
-                                role="menu">
-                        <div md-theme="default" style="color: rgba(0,0,0,0.73)" layout="vertical">
-                            <md-button ng-click="inhibitAll()" aria-label="Inhibit All">Inhibit All</md-button>
-                            <md-button ng-click="stowAll()" aria-label="Stow All">Stow All</md-button>
-                            <md-button ng-click="stopAll()" aria-label="Stop All">Stop All</md-button>
-                            <md-button ng-click="resumeOperations()" aria-label="Resume Operations">Resume Operations</md-button>
-                            <md-button disabled ng-click="shutdownComputing()" aria-label="Shutdown Computing">Shutdown Computing</md-button>
-                        </div>
-                    </md-content>
-
-                </div>
-
-                <span flex></span>
-
-                <div>
-                    <span class="toolbar-time-span">{{utcTime}}</span><span class="toolbar-time-span" style="font-size: 9pt;"> UTC</span><br/>
-                    <span class="toolbar-time-span">{{localTime}}</span><span class="toolbar-time-span" style="font-size: 9pt;"> Local</span>
-                </div>
-
-                <button class="button-toolbar-flat-icon"
-                        ng-click="stateGo('landing')"><span>Home</span>
-                </button>
-
-                <div class="alarms-warning-container">
-                    <button class="unselectable button-toolbar-flat-icon navbar-btn"
-                            ng-click="stateGo('alarms')">
-                        <span class="fa fa-warning"></span>
-                    </button>
                     <span ng-if="newAlarmWarnCount > 0"
                           class="badge alarm-badge alarm-badge-warn">{{newAlarmWarnCount}}</span>
                     <span ng-if="newAlarmErrorCount > 0"
                           class="badge alarm-badge alarm-badge-error">{{newAlarmErrorCount}}</span>
                     <span ng-if="newAlarmCritCount > 0"
                           class="badge alarm-badge alarm-badge-crit">{{newAlarmCritCount}}</span>
-                </div>
-
-                <button class="button-toolbar-flat-icon" ng-click="toggleRightSidenav()">
-                    <span class="fa fa-user"></span>
-                </button>
             </div>
 
-        </md-toolbar>
-        <md-content id="ui-view-container-div" ui-view flex class="md-content-padding">
-        </md-content>
-    </section>
-</section>
+            <button class="button-toolbar-flat-icon" ng-click="toggleRightSidenav()">
+                <span class="fa fa-user"></span>
+            </button>
+        </div>
+
+    </md-toolbar>
+    <md-content id="ui-view-container-div" ui-view scroll-y flex class="md-content-padding" style="overflow: auto">
+    </md-content>
+</div>
+<!--</section>-->
 
 <button class="unselectable toolbar-collapse-button"
         ng-click="showNavbar = !showNavbar">
